--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   ant_design_flutter: 0.0.1+5
   firebase_core: 2.3.0
   firebase_auth: 4.1.4
+  google_sign_in: 5.4.2
+  firebase_auth_web: 5.1.3
   flutter: 
     sdk: flutter
 
